code25_all/scala/16728088.txt
Sandeeps-MacBook-Pro:ScalaScripts sandeep$ scala Hello.scala
/Users/sandeep/Documents/ScalaScripts/Hello.scala:1: error: not found: value \
{\rtf1\ansi\ansicpg1252\cocoartf1187\cocoasubrtf370
 ^
/Users/sandeep/Documents/ScalaScripts/Hello.scala:3: error: not found: value \
{\colortbl;\red255\green255\blue255;\red38\green38\blue38;}
 ^
/Users/sandeep/Documents/ScalaScripts/Hello.scala:3: error: not found: value \
{\colortbl;\red255\green255\blue255;\red38\green38\blue38;}
           ^
/Users/sandeep/Documents/ScalaScripts/Hello.scala:3: error: not found: value \
{\colortbl;\red255\green255\blue255;\red38\green38\blue38;}
                                    ^
/Users/sandeep/Documents/ScalaScripts/Hello.scala:4: error: not found: value \
\margl1440\margr1440\vieww10800\viewh8400\viewkind0
^
/Users/sandeep/Documents/ScalaScripts/Hello.scala:8: error: not found: value \
\f0\fs24 \cf2 println("Hello World from a Scala Script!")}
^
6 errors found

